ADDED invert color, colorize and screenshot button

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,33 @@
 page-home {
 
+  .settings {
+    display: flex;
+    justify-content: space-around;
+
+    button:first-child, button:last-child {
+      display: none;
+    }
+
+    button {
+     background: transparent;
+
+      img {
+        width: 64px;
+        height: 64px;
+      }
+    }
+  }
+
+  // buttons
+  #invertColors {
+
+  }
+
+  #colorize {
+
+  }
+
+  #camera {
+
+  }
 }
