--- a/src/pages/signerate/signerate.scss
+++ b/src/pages/signerate/signerate.scss
@@ -1,7 +1,32 @@
 page-signerate {
 
   .swiper-container-horizontal > .swiper-pagination-bullets {
-    top: 1rem;
+    top: 5vh;
+
+    .swiper-pagination-bullet {
+      margin: 0 8vw;
+      width: 24px;
+      height: 24px;
+      background: #ffffff;
+
+      &::before {
+        content: '';
+        display: block;
+        border-radius: 100%;
+        background: #007aff;
+        width: 8px;
+        height: 8px;
+        margin-left: 7px;
+      }
+
+      &.swiper-pagination-bullet-active {
+        border: 1px solid #007aff;
+      }
+    }
+  }
+
+  .info-button {
+    z-index: 1;
   }
 
   .ios, .md {
