--- a/src/pages/signerate/signerate.scss
+++ b/src/pages/signerate/signerate.scss
@@ -1,5 +1,14 @@
 page-signerate {
 
+  h2 {
+    text-align: center;
+    color: color($colors, danger);
+  }
+
+  .error {
+    color: color($colors, danger);
+  }
+
   .swiper-container-horizontal > .swiper-pagination-bullets {
     top: 5vh;
 
@@ -13,20 +22,37 @@ page-signerate {
         content: '';
         display: block;
         border-radius: 100%;
-        background: #007aff;
+        background: color($colors, primary);
         width: 8px;
         height: 8px;
         margin-left: 7px;
       }
 
       &.swiper-pagination-bullet-active {
-        border: 1px solid #007aff;
+        border: 1px solid color($colors, secondary);
+
+        &::before {
+          background: color($colors, secondary);
+        }
       }
     }
   }
 
   .info-button {
     z-index: 1;
+    width: 32px;
+    height: 32px;
+    padding: 0;
+  }
+
+  .ion-md-information:before,
+  .ion-ios-information:before {
+    font-size: 32px;
+  }
+
+  .item-md,
+  .item-ios {
+    padding-left: 28px;
   }
 
   .ios, .md {
