ADDED more styles

--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -146,6 +146,7 @@ page-tutorial {
     flex-wrap: nowrap;
     align-items: center;
     margin-top: 30px;
+    margin-bottom: 30px;
 
     img {
       margin: 20px;
