Change frequency for getting gyroscope data and set position for signerate initials to fixed

--- a/src/pages/signerate/signerate.scss
+++ b/src/pages/signerate/signerate.scss
@@ -1,5 +1,9 @@
 page-signerate {
 
+  .slide-zoom {
+    position: fixed;
+  }
+
   h2 {
     text-align: center;
     color: color($colors, danger);
