CHANGED font family for h1

--- a/src/pages/tutorial/tutorial.scss
+++ b/src/pages/tutorial/tutorial.scss
@@ -87,6 +87,7 @@ page-tutorial {
     position: relative;
     font-size: 20px;
     color: color($colors, secondary);
+    font-family: 'Roboto', sans-serif;
   }
 
   .signerate {
