--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -40,5 +40,11 @@
 }
 
 h1 {
-  color: color($colors, secondary);
+  color: color($colors, primary);
+  font-family: 'Grand Hotel', cursive;
+  font-size: 3.6rem;
+}
+
+p {
+  font-family: 'Roboto', sans-serif;
 }
